GNU coreutils NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug fixes

  ls's -k option no longer affects how ls -l outputs file sizes.
  It now affects only the per-directory block counts written by -l,
  and the sizes written by -s.  This is for compatibility with BSD
  and with POSIX 2008.  Because -k is no longer equivalent to
  --block-size=1KiB, a new long option --kibibyte stands for -k.
  [bug introduced in coreutils-4.5.4]

  ls -l would leak a little memory (security context string) for each
  nonempty directory listed on the command line, when using SELinux.
  [bug probably introduced in coreutils-6.10 with SELinux support]

  rm -rf DIR would fail with "Device or resource busy" on Cygwin with NWFS
  and NcFsd file systems.  This did not affect Unix/Linux-based kernels.
  [bug introduced in coreutils-8.0, when rm began using fts]

  tac no longer fails to handle two or more non-seekable inputs
  [bug introduced in coreutils-5.3.0]

  tail -f no longer tries to use inotify on GPFS file systems
  [you might say this was introduced in coreutils-7.5, along with inotify
   support, but the GPFS magic number wasn't in the usual places then.]


* Noteworthy changes in release 8.14 (2011-10-12) [stable]

** Bug fixes

  ls --dereference no longer outputs erroneous "argetm" strings for
  dangling symlinks when an 'ln=target' entry is in $LS_COLORS.
  [bug introduced in fileutils-4.0]

  ls -lL symlink once again properly prints "+" when the referent has an ACL.
  [bug introduced in coreutils-8.13]

  sort -g no longer infloops for certain inputs containing NaNs
  [bug introduced in coreutils-8.5]

** Improvements

  md5sum --check now supports the -r format from the corresponding BSD tool.
  This also affects sha1sum, sha224sum, sha384sum and sha512sum.

  pwd now works also on systems without openat.  On such systems, pwd
  would fail when run from a directory whose absolute name contained